# sportBets

./: .env.example  .gitignore  CLAUDE.md  package-lock.json  package.json
.github/workflows/: ci.yml
apps/web/: package.json
db/migrations/: 20260710000000_init.sql  20260711000000_ev_board.sql  20260711130000_collector_runs.sql  20260711140000_resolver.sql  (+4 more)
ops/: sportbets-collectors.service
scripts/: check_banned_strings.sh
workers/: pyproject.toml
workers/adapters/: __init__.py  cs2.py  football.py
workers/agents/: explainer.py
workers/artifacts/backtests/: smoke_sharp_mirror_v0_20260612-20260712_cdf481ec.json
workers/backtest/: __init__.py  harness.py  smoke.py
workers/collectors/: __init__.py  base.py  closing.py  oddspapi.py  therundown.py
workers/core/: __init__.py  config.py  db.py  protocols.py  types.py
workers/engine/: __init__.py  board.py  daily_feed.py  devig.py  ev.py  kelly.py  picks.py
workers/grading/: __init__.py  clv.py  grade.py  settle.py
workers/publishing/: telegram.py  templates.py
workers/resolver/: resolver.py
workers/tests/: conftest.py  test_backtest_harness.py  test_cadence.py  test_closing_capture.py  test_collectors_parsing.py  test_daily_feed.py  test_devig.py  test_ev_kelly.py  test_football_adapter.py  test_picks_append_only.py  test_publish_grade.py  test_publishing_pipeline.py  test_publishing_templates.py  test_resolver.py  test_results_orientation.py  test_scheduler.py  test_settle.py
workers/tools/: __init__.py  collect_real.py  proof_export.py  review.py  run_collectors.py  seed_demo.py
(+30 files in other folders)
